export const food_ratings = [
	{
		title: "Very Healthy",
		rating: 5,
	},
	{
		title: "Healthy",
		rating: 4,
	},
	{
		title: "Benign",
		rating: 3,
	},
	{
		title: "Unhealthy",
		rating: 2,
	},
	{
		title: "Very Unhealthy",
		rating: 1,
	},
]

export const time_ranges = ["today", "this week", "this month"]

export const health_ratings = [
	{ title: "excellent", range: [90, 100] },
	{ title: "good", range: [70, 89] },
	{ title: "so-so", range: [50, 69] },
	{ title: "bad", range: [40, 49] },
	{ title: "terrible", range: [0, 39] },
]
